--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,8 @@ body {
 }
 
 .card-canciones{
+	width: 15rem; /* Ancho fijo para cada tarjeta */
+    height: 25rem; /* Alto fijo para cada tarjeta */
 	background-color: #509bf5;
 	border-radius: 0.5rem;
 	padding: 1.6rem;
@@ -158,6 +160,14 @@ body {
 	margin-top: 1.5rem;
 	margin-bottom: 1rem;
 	font-size: 1.6rem;
+	color: #fff;
+	font-weight: 600;
+}
+
+.card h3 {
+	margin-top: 1.5rem;
+	margin-bottom: 1rem;
+	font-size: 1.2rem;
 	color: #fff;
 	font-weight: 600;
 }
