--- a/css/styles.css
+++ b/css/styles.css
@@ -132,8 +132,6 @@ body {
 }
 
 .card-canciones{
-	width: 15rem; /* Ancho fijo para cada tarjeta */
-    height: 25rem; /* Alto fijo para cada tarjeta */
 	background-color: #509bf5;
 	border-radius: 0.5rem;
 	padding: 1.6rem;
@@ -164,14 +162,6 @@ body {
 	font-weight: 600;
 }
 
-.card h3 {
-	margin-top: 1.5rem;
-	margin-bottom: 1rem;
-	font-size: 1.2rem;
-	color: #fff;
-	font-weight: 600;
-}
-
 .card p {
 	font-size: 1.3rem;
 	color: #b3b3b3;
@@ -195,6 +185,7 @@ body {
 	grid-column: 2/-1;
 	position: fixed;
 	left: 317px;
+	right: 0px;
 	background-color: #8abcf1;
 	padding: 2.5rem;
 	height: 100vh;
@@ -205,9 +196,10 @@ body {
 
 
 .barra-reproduccion{
-	position: fixed;
-	width: 1150px;
-	top: 600px;
+	position: absolute;
+	width: 72%;
+	top: 78%;
+	left: 11.5%;
 	justify-content: center;
 	align-items: center;
 	margin-left: 20px
@@ -215,12 +207,13 @@ body {
 }
 
 .barra-volumen{
-	position: fixed;
-	width: 150px;
-	top: 565px;
+	position: absolute;
+	width: 130px;
+	top: 73%;
+	left: 11.5%;
 	justify-content: center;
 	align-items: center;
-	margin-left: 20px
+	margin-left: 20px;
 
 }
 
@@ -237,19 +230,21 @@ body {
     outline: none;
     border-radius: 50%;
     position: absolute;
-    top: 80%;
-    left: 52%;
+    top: 90%;
+    left: 47.5%;
     transform: translate(50%, -50%);
     cursor: pointer;
 }
 .gif{
-	position: relative;
+	left:11.5%;
+	position: absolute;
 	justify-content: center;
 	align-items: center;
 	display: flex;
-	width: 1150px;
-	height: 500px;
-	margin-left: 20px
+	width: 72%;
+	height: 63%;
+	top: 3%;
+	margin-left: 20px;
 	
 }
 .btn-play .fa-pause {
