--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,6 @@ body {
 }
 
 
-
 /* ********************************** */
 /*          Reproducción              */
 /* ********************************** */
@@ -195,6 +194,7 @@ body {
 	grid-column: 2/-1;
 	position: fixed;
 	left: 317px;
+	right: 0px;
 	background-color: #8abcf1;
 	padding: 2.5rem;
 	height: 100vh;
@@ -205,9 +205,10 @@ body {
 
 
 .barra-reproduccion{
-	position: fixed;
-	width: 1150px;
-	top: 600px;
+	position: absolute;
+	width: 72%;
+	top: 78%;
+	left: 11.5%;
 	justify-content: center;
 	align-items: center;
 	margin-left: 20px
@@ -215,12 +216,13 @@ body {
 }
 
 .barra-volumen{
-	position: fixed;
-	width: 150px;
-	top: 565px;
+	position: absolute;
+	width: 130px;
+	top: 73%;
+	left: 11.5%;
 	justify-content: center;
 	align-items: center;
-	margin-left: 20px
+	margin-left: 20px;
 
 }
 
@@ -237,19 +239,21 @@ body {
     outline: none;
     border-radius: 50%;
     position: absolute;
-    top: 80%;
-    left: 52%;
+    top: 90%;
+    left: 47.5%;
     transform: translate(50%, -50%);
     cursor: pointer;
 }
 .gif{
-	position: relative;
+	left:11.5%;
+	position: absolute;
 	justify-content: center;
 	align-items: center;
 	display: flex;
-	width: 1150px;
-	height: 500px;
-	margin-left: 20px
+	width: 72%;
+	height: 63%;
+	top: 3%;
+	margin-left: 20px;
 	
 }
 .btn-play .fa-pause {
