--- a/css/styles.css
+++ b/css/styles.css
@@ -271,3 +271,9 @@ body {
     font-size: 2.3rem;
     padding-left: .5rem;
 }
+
+.song-duration,
+.current-time {
+    font-size: 18px; /* Tamaño del texto */
+    font-weight: bold; /* Negrita */
+}
