--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,7 @@ body {
 	position: absolute;
 	width: 130px;
 	top: 73%;
-	left: 11.5%;
+	right: 15.25%;
 	justify-content: center;
 	align-items: center;
 	margin-left: 20px;
@@ -272,8 +272,32 @@ body {
     padding-left: .5rem;
 }
 
-.song-duration,
+.song-duration{
+	font-size: 18px; /* Tamaño del texto */
+    font-weight: bold; /* Negrita */
+	position: absolute;
+	top: 81%;
+	left: 82%;
+}
 .current-time {
     font-size: 18px; /* Tamaño del texto */
     font-weight: bold; /* Negrita */
+	position: absolute;
+	top: 81%;
+	left: 12.5%;
+
+}
+
+.icono-volumen {
+    position: absolute;
+    top: 74%;
+    right: 24.5%;
+    transform: translate(50%, -50%);
+    cursor: pointer;
+    z-index: 1; /* Asegura que el icono esté sobre la barra de volumen */
+}
+
+.icono-volumen i {
+    font-size: 1.5rem; /* Ajusta el tamaño del icono según sea necesario */
+    color: #121212; /* Cambia el color del icono si es necesario */
 }
