--- a/css/styles.css
+++ b/css/styles.css
@@ -323,10 +323,10 @@ body {
 .song-title{
 	position: absolute;
 	width: 72%;
-	top: 72.5%;
+	top: 71%;
 	left: 11.5%;
 	justify-content: center;
 	align-items: center;
-	margin-left: 20px
-
+	margin-left: 20px;
+	font-size: 25px;
 }
