--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ body {
 	padding-left: 3rem;
 	padding-right: 3rem;
 	padding-bottom: 30.9rem;
-	height: 100%;
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	gap: 3rem;
